test/semantic_errors/invalid_abbreviation1.mc
void main() {
    char i;
    i++; /* post-increment a char */
}